minor updates of deprecated code